--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,6 @@
             <h2>Project ANI</h2>
             <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
         </div>
-        <video src="Images/ForestSample.mp4" muted loop autoplay></video>
         </div>
     </div>
 
@@ -106,7 +105,6 @@
                 </div>
                 </div>
                 <div class="right">
-                    <img src="Images/Baguio.png" width="600vw" height="550vh">
                 </div>
         </div>  
 
@@ -328,7 +326,7 @@
                 </div> 
             </div>
              <script>
-                // Get the modal
+                // Get the modal crops
                 var modal = document.getElementsByClassName('modal');
 
                 // Get the button that opens the modal
@@ -459,7 +457,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal9" class="modal-season">
+                <div id="myModal10" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
                         <div class="modal-header-season">
@@ -482,7 +480,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal9" class="modal-season">
+                <div id="myModal11" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
                         <div class="modal-header-season">
@@ -505,7 +503,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>    
                 <!-- The Modal -->
-                <div id="myModal9" class="modal-season">
+                <div id="myModal12" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
                         <div class="modal-header-season">
@@ -528,7 +526,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal9" class="modal-season">
+                <div id="myModal13" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
                         <div class="modal-header-season">
@@ -551,7 +549,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal9" class="modal-season">
+                <div id="myModal14" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
                         <div class="modal-header-season">
@@ -570,38 +568,146 @@
             </div>
 
             <div class="row2">
-                <button class="months"><img src="Images/july.png" width="150vw" height="130vh">
-                <h2>July</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--July Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/july.png" width="150vw" height="130vh">
+                    <h2>July</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal15" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>July</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/august.png" width="150vw" height="130vh">
-                <h2>August</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--August Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/august.png" width="150vw" height="130vh">
+                    <h2>August</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal16" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>August</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/september.png" width="150vw" height="130vh">
-                <h2>September</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                 <!--September Trigger/Open The Modal -->
+                 <button class="myBtn-season"><img src="Images/september.png" width="150vw" height="130vh">
+                    <h2>September</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal17" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>September</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/october.png" width="150vw" height="130vh">
-                <h2>October</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--October Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/october.png" width="150vw" height="130vh">
+                    <h2>October</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal18" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>October</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/november.png" width="150vw" height="130vh">
-                <h2>November</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--November Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/november.png" width="150vw" height="130vh">
+                    <h2>November</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal19" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>November</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/december.png" width="150vw" height="130vh">
-                <h2>December</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--December Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/december.png" width="150vw" height="130vh">
+                    <h2>December</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal20" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header-season">
+                            <span class="close-season">×</span>
+                            <h2>December</h2>
+                        </div>
+                        <div class="modal-body-season">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer-season">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
             </div>  
             <script>
-                // Get the modal
+                // Get the modal season
                 var modalseason = document.getElementsByClassName('modal-season');
 
                 // Get the button that opens the modal
@@ -634,6 +740,30 @@
                 btnseason[5].onclick = function() {
                     modalseason[5].style.display = "block";
                 }
+
+                btnseason[6].onclick = function() {
+                    modalseason[6].style.display = "block";
+                }
+
+                btnseason[7].onclick = function() {
+                    modalseason[7].style.display = "block";
+                }
+
+                btnseason[8].onclick = function() {
+                    modalseason[8].style.display = "block";
+                }
+
+                btnseason[9].onclick = function() {
+                    modalseason[9].style.display = "block";
+                }
+
+                btnseason[10].onclick = function() {
+                    modalseason[10].style.display = "block";
+                }
+
+                btnseason[11].onclick = function() {
+                    modalseason[11].style.display = "block";
+                }
                 // When the user clicks on <span> (x), close the modal
                 spanseason[0].onclick = function() {
                     modalseason[0].style.display = "none";
@@ -657,6 +787,30 @@
 
                 spanseason[5].onclick = function() {
                     modalseason[5].style.display = "none";
+                }
+
+                spanseason[6].onclick = function() {
+                    modalseason[6].style.display = "none";
+                }
+
+                spanseason[7].onclick = function() {
+                    modalseason[7].style.display = "none";
+                }
+
+                spanseason[8].onclick = function() {
+                    modalseason[8].style.display = "none";
+                }
+
+                spanseason[9].onclick = function() {
+                    modalseason[9].style.display = "none";
+                }
+
+                spanseason[10].onclick = function() {
+                    modalseason[10].style.display = "none";
+                }
+
+                spanseason[11].onclick = function() {
+                    modalseason[11].style.display = "none";
                 }
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
