--- a/Index.html
+++ b/Index.html
@@ -115,7 +115,7 @@
         <div class="Crop-Section">
             <div class="row1">
                 <!--Cabbage Open The Modal -->
-                <button class="myBtn"><img src="Images/cabbage1.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/cabbage.png" width="55%" height="45%">
                     <h2>Cabbage</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -139,7 +139,7 @@
                 </div>
 
                 <!--Chinese Cabbage Trigger/Open The Modal -->
-                <button class="myBtn"><img src="Images/chinese-cabbage.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/chinese-cabbage.png" width="55%" height="45%">
                     <h2>Chinese Cabbage</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -162,7 +162,7 @@
                 </div>
 
                  <!--Lettuce Trigger/Open The Modal -->
-                 <button class="myBtn"><img src="Images/lettuce.png" width="150vw" height="130vh">
+                 <button class="myBtn"><img src="Images/lettuce.png" width="55%" height="45%">
                     <h2>Lettuce</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>    
@@ -185,7 +185,7 @@
                 </div>
 
                 <!--Cauliflower Trigger/Open The Modal -->
-                <button class="myBtn"><img src="Images/cauliflower.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/cauliflower.png" width="55%" height="45%">
                     <h2>Cauliflower</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button> 
@@ -208,7 +208,7 @@
                 </div>
 
                  <!--Snap Beans Trigger/Open The Modal -->
-                 <button class="myBtn"><img src="Images/snapbeans.png" width="150vw" height="130vh">
+                 <button class="myBtn"><img src="Images/snapbeans.png" width="55%" height="45%">
                     <h2>Snap Beans</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -233,7 +233,7 @@
 
             <div class="row2">
                  <!--Garden Peas Trigger/Open The Modal -->
-                 <button class="myBtn"><img src="Images/gardenpeas.png" width="150vw" height="130vh">
+                 <button class="myBtn"><img src="Images/gardenpeas.png" width="55%" height="45%">
                     <h2>Garden Peas</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -256,7 +256,7 @@
                 </div>
 
                 <!--Sweet Pepper Trigger/Open The Modal -->
-                <button class="myBtn"><img src="Images/bell-pepper.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/bell-pepper.png" width="55%" height="45%">
                     <h2>Sweet Pepper</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -279,7 +279,7 @@
                 </div>
 
                 <!--White Potato Trigger/Open The Modal -->
-                <button class="myBtn"><img src="Images/potato.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/potato.png" width="55%" height="45%">
                     <h2>White Potato</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
@@ -303,7 +303,7 @@
 
 
                 <!--White Potato Trigger/Open The Modal -->
-                <button class="myBtn"><img src="Images/carrots.png" width="150vw" height="130vh">
+                <button class="myBtn"><img src="Images/carrots.png" width="55%" height="45%">
                     <h2>Carrots</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
