--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,10 @@
         </script>
 <style>
 </style>
+    <!--Map box-->
     <script src="JS/location.js" defer></script>
+    <!--Admin Login-->
+    <script src="JS/adminlogin.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
@@ -880,14 +883,6 @@
 
             <p>Images and Videos from Google</p>
         </div>
-        <script>
-            function check(form){
-                if(form.uname.value == "123"  && form.psw.value == "123"){
-                    var myWindow = window.open("", "_self");
-                    myWindow.document.location("admin.html");
-                }
-            }
-        </script>
         <!--Modal for admin login-->
         <script>
             // Get the modal
