--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
     <div class="Banner" id="HomeID">
         <div class="Banner1">
             <h2>Project ANI</h2>
-            <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
+            <o>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</o>
         </div>
         </div>
     </div>
@@ -507,9 +507,9 @@
         <div class="Season-Section">
             <div class="row1">
                 <!--January Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/january.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>January</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Dry season farming can help improve the quality of the land being used.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal9" class="modal-season">
@@ -518,7 +518,7 @@
                         <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>January</h2>
-                        </div>
+                        </div>  
                         <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
@@ -530,9 +530,9 @@
                 </div> 
 
                 <!--February Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/february.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>February</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Additionally, the irrigation of the farms helps to improve the water condition of the soil.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal10" class="modal-season">
@@ -553,9 +553,9 @@
                 </div>
 
                  <!--March Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/march.png" width="150vw" height="130vh">
+                 <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>March</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>It also helps to dissolve the nutrients in the soil and makes them available to the plant.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal11" class="modal-season">
@@ -576,9 +576,9 @@
                 </div>
 
                  <!--April Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/april.png" width="150vw" height="130vh">
+                 <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>April</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>The process helps to regulate the temperature of the soil.</p>
                 </button>    
                 <!-- The Modal -->
                 <div id="myModal12" class="modal-season">
@@ -599,9 +599,9 @@
                 </div>
 
                 <!--May Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/may.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>May</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Dry season has lower chance of rainfall and low humidity.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal13" class="modal-season">
@@ -622,9 +622,9 @@
                 </div>
 
                 <!--June Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/june.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>June</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>A good balance of rain and proper irrigation can lead to faster-growing plants</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal14" class="modal-season">
@@ -647,9 +647,9 @@
 
             <div class="row2">
                 <!--July Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/july.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>July</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Which can cut down on germination time and the length between seeding and harvest. </p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal15" class="modal-season">
@@ -670,9 +670,9 @@
                 </div>
 
                 <!--August Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/august.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>August</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>The crops are dependent on water during their entire lifecycle in order to survive and thrive</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal16" class="modal-season">
@@ -693,9 +693,9 @@
                 </div>
 
                  <!--September Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/september.png" width="150vw" height="130vh">
+                 <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>September</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Farmers can use the rainy days to work important paperwork to ensure their crops are protected for the year. </p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal17" class="modal-season">
@@ -716,9 +716,9 @@
                 </div>
 
                 <!--October Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/october.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>October</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Rainy days allow for farmers to utilize their farm management software</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal18" class="modal-season">
@@ -739,9 +739,9 @@
                 </div>
 
                 <!--November Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/november.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/rainy-season.png" width="210vw" height="180vh">
                     <h2>November</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Agriculture is our wisest pursuit, because it will in the end contribute most to real wealth, good morals & happiness.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal19" class="modal-season">
@@ -762,9 +762,9 @@
                 </div>
 
                 <!--December Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/december.png" width="150vw" height="130vh">
+                <button class="myBtn-season"><img src="Images/dry-season.png" width="210vw" height="180vh">
                     <h2>December</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Farmers Provide Access to Food. Many Americans enjoy an abundant food supply</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal20" class="modal-season">
