--- a/Index.html
+++ b/Index.html
@@ -497,6 +497,7 @@
         <!--Season-->
         <div class="feeler-season" id="SeasonsID">
             <h1>Season</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices eros in cursus turpis massa tincidunt dui ut. Porta lorem mollis aliquam ut porttitor leo. Id semper risus in hendrerit gravida rutrum quisque non tellus.</p>
         </div>
         <div class="Season-Section">
             <div class="row1">
