--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,7 @@
         <!--Crops-->
         <div class="feeler-crops" id="CropsID">
             <h1>Top 10 Highland Crops</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices eros in cursus turpis massa tincidunt dui ut. Porta lorem mollis aliquam ut porttitor leo. Id semper risus in hendrerit gravida rutrum quisque non tellus.</p>
+            <p>Project ANI aims to help Benguet farmers optimize crop production and limit the adverse impacts of climate variability and other production factors through the implementation of a Decision Support System (DSS) that employs Data Mining and Machine Learning techniques. These are the top 10 crops in the different municipalities of Baguio City</p>
         </div>
         <div class="Crop-Section">
             <div class="row1">
@@ -497,7 +497,7 @@
         <!--Season-->
         <div class="feeler-season" id="SeasonsID">
             <h1>Season</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices eros in cursus turpis massa tincidunt dui ut. Porta lorem mollis aliquam ut porttitor leo. Id semper risus in hendrerit gravida rutrum quisque non tellus.</p>
+            <p>Project ANI aims to help reduce crop waste and loss through crop yield prediction, and help promote sustainable agriculture and economic growth. These section contains information about trending crops in each month. </p>
         </div>
         <div class="Season-Section">
             <div class="row1">
@@ -571,7 +571,7 @@
                 </div>
 
                  <!--April Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/dry-season.png">
+                 <button class="myBtn-season"><img src="Images/april.jpg">
                     <h2>April</h2>
                     <p>The process helps to regulate the temperature of the soil.</p>
                 </button>    
@@ -594,7 +594,7 @@
                 </div>
 
                 <!--May Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/dry-season.png">
+                <button class="myBtn-season"><img src="Images/may.jpg">
                     <h2>May</h2>
                     <p>Dry season has lower chance of rainfall and low humidity.</p>
                 </button>
